# newsletter-api

./: Cargo.toml  README.md  configuration.yaml
.github/workflows/: general-actions.yml
migrations/: 20240502052349_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
