[package]
name = "newsletter-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
config = "0.14.0"
reqwest = "0.11.18"
serde = {version = "1", features = ["derive"]}
tokio = "1.31.0"
uuid = {version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
tracing = { version = "0.1.4", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
  "runtime-async-std",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]
